--- a/app/src/main/res/layout/dialog_edit.xml
+++ b/app/src/main/res/layout/dialog_edit.xml
@@ -12,7 +12,7 @@
         android:padding="24dp">
 
         <TextView
-            android:id="@+id/dialog_title"
+            android:id="@+id/empty_hint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#4b4b4b"
@@ -40,7 +40,7 @@
             android:maxLength="128" />
 
         <EditText
-            android:id="@+id/task_desc"
+            android:id="@+id/item_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:imeOptions="actionDone"
@@ -49,7 +49,7 @@
             android:maxLength="128" />
 
         <EditText
-            android:id="@+id/task_amount"
+            android:id="@+id/item_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:imeOptions="actionDone"
