--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
         <item name="android:windowFullscreen">true</item>
     </style>
 
-    <style name="Main_Page_Padding">
+    <style name="MainPagePadding">
         <item name="android:paddingRight">5dp</item>
         <item name="android:paddingLeft">5dp</item>
     </style>
