--- a/app/src/main/res/layout/list_task.xml
+++ b/app/src/main/res/layout/list_task.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +10,7 @@
         android:id="@+id/task_list"
         style="@style/MainPagePadding"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingTop="5dp"
         tools:context="ltd.yazz.reward.ui.fragment.TaskOrWishFragment">
 
@@ -28,4 +28,4 @@
         android:visibility="gone"
         tools:context="ltd.yazz.reward.ui.fragment.TaskOrWishFragment" />
 
-</LinearLayout>
+</FrameLayout>
