--- a/app/src/main/res/layout/item_task_list.xml
+++ b/app/src/main/res/layout/item_task_list.xml
@@ -19,7 +19,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="54dp"
+            android:layout_height="@dimen/list_item_height"
             android:layout_weight="2"
             android:orientation="vertical"
             android:padding="5dp">
@@ -28,9 +28,9 @@
                 android:id="@+id/empty_hint"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
-                android:layout_weight="1.5"
+                android:layout_weight="2"
                 android:textColor="@android:color/black"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 tools:text="@string/title" />
 
             <TextView
@@ -48,7 +48,7 @@
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center|end"
             android:textSize="24sp"
             tools:text="@string/amount" />
     </LinearLayout>
