--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00BCD4</color>
-    <color name="colorPrimaryDark">#0097A7</color>
-    <color name="colorAccent">#00BCD4</color>
-
-    <color name="split_line">#E6E6E6</color>
-
-    <color name="colorRead">#eae5e0</color>
-
-    <color name="dark_background">#f8f8f8</color>
-
-    <color name="black_overlay">#66000000</color>
+    <color name="COLOR_PRIMARY">#00BCD4</color>
+    <color name="COLOR_PRIMARY_DARK">#0097A7</color>
+    <color name="COLOR_ACCENT">#00BCD4</color>
+    <color name="SPLIT_LINE">#E6E6E6</color>
+    <color name="COLOR_READ">#eae5e0</color>
+    <color name="DARK_BACKGROUND">#f8f8f8</color>
+    <color name="BLACK_OVERLAY">#66000000</color>
 
     <color name="PURE_BLUE_500">#2196f3</color>
     <color name="PURE_PURPLE_500">#9c27b0</color>
@@ -26,7 +22,6 @@
     <color name="PURE_TEAL_500">#009688</color>
     <color name="PURE_BLUE_GRAY_500">#607d8b</color>
     <color name="PURE_BLACK_500">#424242</color>
-
 
     <color name="PURE_GRAY_300">#e0e0e0</color>
     <color name="PURE_LIGHT_WHITE">#ffffff</color>
@@ -73,7 +68,7 @@
     <color name="ACCENT_PINK_A200">#ff4081</color>
     <color name="ACCENT_PINK_A400">#f50057</color>
 
-    <color name="text_normal_dark">#404040</color>
-    <color name="text_normal_gray">#757575</color>
-    <color name="text_normal_pink">#ff80ab</color>
+    <color name="TEXT_NORMAL_DARK">#404040</color>
+    <color name="TEXT_NORMAL_GRAY">#757575</color>
+    <color name="TEXT_NORMAL_PINK">#ff80ab</color>
 </resources>
