--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,10 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
 
+    <dimen name="bottom_bar_height">40dp</dimen>
+    <dimen name="list_item_height">54dp</dimen>
+    <dimen name="list_item_title">36dp</dimen>
+    <dimen name="list_item_desc">18dp</dimen>
 
 
 </resources>
