add edit enter to next item and fix app icon on low version os

--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -76,8 +76,8 @@
                         android:id="@+id/item_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:imeOptions="actionNext"
-                        android:singleLine="true" />
+                        android:imeOptions="actionDone"
+                        android:inputType="textMultiLine" />
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
@@ -90,8 +90,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/desc"
-                        android:imeOptions="actionNext"
-                        android:singleLine="true" />
+                        android:imeOptions="actionDone"
+                        android:inputType="textMultiLine" />
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
